c/examples/writing-a-c-compiler-tests/tests/chapter_4/valid/eq_true.c
int main(void) {
    return 1 == 1;
}