c/examples/writing-a-c-compiler-tests/tests/chapter_4/invalid_parse/missing_const.c
int main(void)
{
    10 <= !;
}